Added some quality of life updates.

--- a/src/main/resources/templates/500.html
+++ b/src/main/resources/templates/500.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Internal Server!</title>
+<title>Internal Server Error!</title>
 </head>
 <body>
 <div style="padding-bottom: 80px;">
