--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -10,7 +10,7 @@
 
   <header th:insert="layout/layout.html :: header"></header>
   <div th:replace="layout/layout.html :: menu" ></div>
-  <div align="center"><h1><b>Inventory Management System</b></h1></div>
+  <div align="center"><h1><b>Car Inventory Management System</b></h1></div>
   <div style="padding-left: 50px; padding-right: 50px;">
   	  
 	  <h3 th:inline = "text">Hello <b>[[${#httpServletRequest.RemoteUser}]]</b>!</h3>
