--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -70,7 +70,7 @@
 			</fieldset>
 			<br />
 			<fieldset class="button-container">
-				<button class="btn btn-primary" type="submit">Submit</button>
+				<button class="btn btn-primary" type="submit">Log In</button>
 			</fieldset>
 		</form>
 	</div>
