--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -20,6 +20,7 @@
       <li><a href="#" th:href="@{/supplier/index}">Suppliers</a></li>
       <li><a href="#" th:href="@{/inventory/list}">Product Inventory</a></li>
       <li><a href="#" th:href="@{/staff/list}" sec:authorize="hasRole('ADMIN')" >Staff</a></li>
+      <li><a href="#" th:href="@{/UsageForm/formHistory}">Form History</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
