--- a/src/main/resources/templates/BrandIndex.html
+++ b/src/main/resources/templates/BrandIndex.html
@@ -42,7 +42,7 @@
           </tr>
         </tbody>
     </table>
-    <div th:if="${totalPages >1}">
+    <div th:if="${totalPages >1}" style="padding-left: 25px">
 		<div class="row" style="display: flex; flex-direction:row;">
 		
 			<div style="padding-right: 10px;">
@@ -57,13 +57,15 @@
 			</div>
 			
 			<div style="padding-right: 10px;">
-				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${currentPage+1}}">Next</a>
-				<span th:unless="${currentPage < totalPages}">Next</span>
+				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${currentPage+1}}"><button class="btn btn-primary" style="margin-right: 15px">Next</button></a>
+				<span th:unless="${currentPage < totalPages}"><button class="btn btn-primary" style="margin-right: 15px">Next</button></span>
 			</div>
 			
 			<div style="padding-right: 10px;">
-				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${totalPages}}">Last</a>
-				<span th:unless="${currentPage < totalPages}">Last</span>
+				<a th:if="${currentPage < totalPages}" th:href="@{'/brand/page/'+${totalPages}}"><button
+						class="btn btn-primary" style="margin-right: 15px">Last</button></a>
+				<span th:unless="${currentPage < totalPages}"><button
+						class="btn btn-primary" style="margin-right: 15px">Last</button></span>
 			</div>
 				
 		</div>
