--- a/src/main/resources/templates/TransactionSummary.html
+++ b/src/main/resources/templates/TransactionSummary.html
@@ -64,8 +64,8 @@ th, td {
 			
 		
 		
-	<a href="#" th:href="@{/inventory/list}"><button class="btn btn-primary">Go back to inventory list</button></a>
-	<a href="#" th:href="@{/UsageForm/formHistory}"><button class="btn btn-primary" style="margin-left: 15px">Go back to Form History</button></a>
+	<a href="#" th:href="@{/inventory/list}"><button class="btn btn-primary">Go back to Inventory List</button></a>
+	<a href="#" th:href="@{/UsageForm/formHistory}"><button class="btn btn-primary" style="margin-left: 15px">Go back to Transaction History</button></a>
 	
 </div>
 
