--- a/src/main/resources/templates/UsageForm.html
+++ b/src/main/resources/templates/UsageForm.html
@@ -13,7 +13,7 @@ th, td {
   text-align: center;
 }
 </style>
-<title>ProductList</title>
+<title>Product List</title>
 </head>
 <body>
 <div style="padding-bottom: 80px;">
@@ -56,7 +56,7 @@ th, td {
 			<td width="50px">
 				<div class="quantitybtn">
 					<input type="button" value="-" class="minus"
-						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" /><input type="text" name="quantity" th:value="${cart.qty}"
+						th:attr="inventory_id = ${cart.inventory.id}" id="item_minus" /><input type="number" name="quantity" th:value="${cart.qty}"
 						th:attr="inventory_id = ${cart.inventory.id}" id="item_input" min="1" max="" title="Qty" class="input-text" /><input type="button" value="+" class="plus"
 						th:attr="inventory_id = ${cart.inventory.id}" id="item_plus" /> 
 						<input type="hidden" name="inventoryId" th:value="${cart.inventory.id}" />
@@ -143,7 +143,12 @@ th, td {
         let inventoryId = elem.getAttribute("inventory_id");
         let qty = elem.value;
         let action = "change"
-        ChangeCartQty(inventoryId, {action , qty});
+        if(qty < 1) {
+        	alert("Quantity must be more than 0");
+        	elem.value = 1;
+        } else {
+        	ChangeCartQty(inventoryId, {action , qty});
+        }
     }
     
     function ChangeCartQty(inventoryId, { action, qty }) {
