--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -11,10 +11,10 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#" th:href="@{/}">CIMS</a>
+      <a class="navbar-brand" href="#" th:href="@{/home}">CIMS</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#" th:href="@{/}">Home</a></li>
+      <li><a href="#" th:href="@{/home}">Home</a></li>
       <li><a href="#" th:href="@{/product/list}">Catalogue</a></li>
       <li><a href="#" th:href="@{/brand/index}">Brands</a></li>
       <li><a href="#" th:href="@{/supplier/index}">Suppliers</a></li>
@@ -40,7 +40,7 @@
 </nav>
 </div>
 <footer style="position:fixed; height: 80px; margin-top: -80px; bottom:0; width: 100%; padding-left: 20px; padding-bottom: 10px; padding-top: 10px; background-color: black;" th:fragment="footer">
-		<a href="Home" th:href="@{/}">Back to Home</a>
+		<a href="Home" th:href="@{/home}">Back to Home</a>
 		<br/>
 		 <small style="color: white;">Now is: <b
 			th:text="${execInfo.now.time}"></b></small> <br /> 
